Fixed all know issues
Menu not looking good on mobile, education section was not adjusting to mobile properly, background image of skills was not displaying properly so replaced with a different image

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,8 +88,7 @@ a{
 	height: 100vh;
 	width: 250px;
 	z-index: 999;
-	background-color: rgba(128, 128, 128, 0.363);
-	backdrop-filter: blur(3em);
+	background-color: #b92e34;
 	box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
 	display: none;
 	flex-direction: column;
@@ -337,7 +336,7 @@ header{
 }
 
 .ListItem{
-	background-image: url(/img/Wires.webp);
+	background-image: url(/img/Skillsimage.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -549,7 +548,6 @@ canvas{
 
 .Nait{
 	max-width: 440px;
-	max-height: 200px;
 	background-color: rgba(128, 128, 128, 0.432);
 	border-radius: 8px;
 	margin-bottom: 36px;
